Fixed issue with some statistic and link cards having extra space that cannot be clicked to perform its function. Also moved cards to be justified to the left

--- a/mens-mental-health-app/src/index.css
+++ b/mens-mental-health-app/src/index.css
@@ -73,7 +73,7 @@
 
 .card-container{
     display: flex;
-    justify-content: space-around;
+    justify-content: left;
     flex-wrap: wrap;
     gap: 20px;
 }
